<resources>
    <string name="app_name" translatable="false">Edumax</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="posts">Posts</string>
    <string name="people">People</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="email_hint">Exp: email@example.com</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_hint">Type a strong password</string>
    <string name="username_hint">Type your new username</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="title_hint">Type the title</string>
    <string name="description_hint">Type the description</string>
    <string name="add_post">Add post</string>
    <string name="password_hint_login">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account ?</string>
    <string name="password_reset">Password reset</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="fullName">FullName</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure to want to logout ?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFoZXJhbGkiLCJhIjoiY2wyZXRvMXc5MDQwbzNlbnpod2l3Nm9sMSJ9.HIzNbLYMYAhRFr9c9FxlkQ</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_0">0</string>
    <string name="my_location">My location</string>
    <string name="location">location</string>
    <string name="people_in_this_place">People who were here :</string>
    <string name="add_comment">Add comment</string>
    <string name="comment">Comment</string>
    <string name="new_message">New message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add</string>
</resources>